# cpdt2

./: .gitignore  Cargo.toml  Cross.toml  Makefile  NOTES.md  README.md  build.rs  ci-test-verification.md  nextest.toml
.cargo/: config.toml
.cursor/reviews/: task1.md  task10.md  task11.md  task12.md  task13.md  task14.md  task15.md  task16.md  task17.md  task18.md  task19.md  task2.md  task20.md  task21.md  task22.md  task23.md  task3.md  task4.md  task5.md  task6.md  task7.md  task8.md  task9.md
.cursor/rules/: runtime-checks.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: .gitkeep  ci.yml  coverage.yml  release.yml
.kiro/specs/disk-speed-test/: design.md  requirements.md  tasks.md
.kiro/specs/github-actions-cicd/: design.md  requirements.md  tasks.md
benches/: performance_regression.rs
docs/: ARCHITECTURE.md  CROSS_PLATFORM_BUILD.md  TESTING.md
scripts/: build-cross-platform.sh  format.sh  release.sh  setup-cross-compilation.sh  test-runner.sh
src/: lib.rs  main.rs
src/cli/: args.rs  args_comprehensive_test.rs  args_test.rs  device_list.rs  display.rs  display_comprehensive_test.rs  display_test.rs  mod.rs
src/core/: config.rs  config_test.rs  error_test.rs  mod.rs  progress.rs  progress_integration_test.rs  stats.rs  stats_comprehensive_test.rs  tests.rs
src/platform/: android.rs  error_conditions_test.rs  ios.rs  linux.rs  linux_test.rs  macos.rs  macos_test.rs  mobile_platforms_test.rs  mock_platform.rs  mod.rs  platform_test.rs  windows.rs  windows_test.rs
src/test_utils/: cleanup.rs  mod.rs  test_data.rs  test_environment.rs
tests/: cli_integration_tests.rs  test_infrastructure_tests.rs
