[package]
name = "disk-speed-test"
version = "0.1.0"
edition = "2021"
authors = ["Disk Speed Test Team"]
description = "Cross-platform disk speed testing utility"
license = "MIT"
repository = "https://github.com/example/disk-speed-test"
homepage = "https://github.com/example/disk-speed-test"
documentation = "https://docs.rs/disk-speed-test"
readme = "README.md"
keywords = ["benchmark", "disk", "performance", "storage", "cross-platform"]
categories = ["command-line-utilities", "development-tools::profiling"]
rust-version = "1.70"

[lib]
name = "disk_speed_test"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "disk-speed-test"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
atty = "0.2"
rand = "0.8"

# Optional dependencies for test utilities
tempfile = { version = "3.0", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winbase", "handleapi", "errhandlingapi", "winnt", "minwindef", "winerror"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
android_logger = "0.13"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
serial_test = "3.0"
env_logger = "0.10"
pretty_assertions = "1.4"

[features]
default = []
test-utils = ["tempfile"]

# Platform-specific features for conditional compilation
windows-platform = []
macos-platform = []
linux-platform = []
android-platform = []
ios-platform = []

# Test features for platform-specific testing
windows-tests = ["windows-platform"]
macos-tests = ["macos-platform"]
linux-tests = ["linux-platform"]
mobile-tests = ["android-platform", "ios-platform"]

# Build features
static-linking = []
dynamic-linking = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

# Cross-compilation configuration
[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[target.aarch64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "target-feature=+crt-static"]

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"

[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+crt-static"]

[target.aarch64-unknown-linux-musl]
linker = "aarch64-linux-musl-gcc"

# Mobile targets
[target.aarch64-linux-android]
linker = "aarch64-linux-android21-clang"

[target.armv7-linux-androideabi]
linker = "armv7a-linux-androideabi21-clang"

[target.i686-linux-android]
linker = "i686-linux-android21-clang"

[target.x86_64-linux-android]
linker = "x86_64-linux-android21-clang"

[target.aarch64-apple-ios]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]

[target.x86_64-apple-ios]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]