[package]
name = "disk-speed-test"
version = "0.1.0"
edition = "2021"
authors = ["Disk Speed Test Team"]
description = "Cross-platform disk speed testing utility"
license = "MIT"
repository = "https://github.com/example/disk-speed-test"
homepage = "https://github.com/example/disk-speed-test"
documentation = "https://docs.rs/disk-speed-test"
readme = "README.md"
keywords = ["benchmark", "disk", "performance", "storage", "cross-platform"]
categories = ["command-line-utilities", "development-tools::profiling"]
rust-version = "1.70"

[lib]
name = "disk_speed_test"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "disk-speed-test"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
atty = "0.2"
rand = "0.8"

# Optional dependencies for test utilities
tempfile = { version = "3.0", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winbase", "handleapi", "errhandlingapi", "winnt", "minwindef", "winerror"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
android_logger = "0.13"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
proptest = "1.0"
serial_test = "3.0"
env_logger = "0.10"
pretty_assertions = "1.4"

[features]
default = []
test-utils = ["tempfile"]

# Platform-specific features for conditional compilation
windows-platform = []
macos-platform = []
linux-platform = []
android-platform = []
ios-platform = []

# Test features for platform-specific testing
windows-tests = ["windows-platform"]
macos-tests = ["macos-platform"]
linux-tests = ["linux-platform"]
mobile-tests = ["android-platform", "ios-platform"]

# Build features
static-linking = []
dynamic-linking = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

# Cross-compilation configuration moved to .cargo/config.toml
# to avoid duplication and unused manifest key warnings